# insurance

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  base.hpp  company.cpp  company.hpp  game.cpp  game.hpp  insurance.cpp  insurance.hpp  main_window.cpp  main_window.hpp  random.cpp  random.hpp
